--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,14 +33,15 @@ dependencies:
 
   #cached image
   cached_network_image: ^3.2.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
-  retrofit_generator: 3.0.1+1
-  floor_generator: 1.2.0
-  build_runner: 2.1.2
+  build_runner: ^2.4.9
+  floor_generator: ^1.5.0
+  retrofit_generator: ^8.1.0
 
 flutter:
   uses-material-design: true
